--- a/.github/workflows/auto-create-pr-data-sync.yaml
+++ b/.github/workflows/auto-create-pr-data-sync.yaml
@@ -27,8 +27,11 @@ jobs:
 
       - uses: actions/checkout@v3
         if: ${{ steps.check.outputs.relevant == 'true' }}
-        with:
-          ref: main
+
+      - name: Reset branch
+        run: |
+          git fetch origin main:main
+          git reset --hard main
 
       - name: Create Pull Request
         if: ${{ steps.check.outputs.relevant == 'true' }}
