--- a/.github/workflows/auto-create-pr-data-sync.yaml
+++ b/.github/workflows/auto-create-pr-data-sync.yaml
@@ -29,9 +29,16 @@ jobs:
         if: ${{ steps.check.outputs.relevant == 'true' }}
 
       - name: Reset branch
+        shell: bash
         run: |
           git fetch origin main:main
           git reset --hard main
+
+
+      - name: Make a change
+        shell: bash
+        run: |
+          date > domains/data-sync/.pr-changed
 
       - name: Create Pull Request
         if: ${{ steps.check.outputs.relevant == 'true' }}
