--- a/.github/workflows/auto-create-pr-data-sync.yaml
+++ b/.github/workflows/auto-create-pr-data-sync.yaml
@@ -6,34 +6,34 @@ on:
       - "**"
       - "!main"
     paths:
-      - domains/data-sync/**
+      - .github/workflows/auto-create-pr-data-sync.yaml
+      # - domains/data-sync/**
 
 jobs:
   autocreate-pr:
     name: Auto-create PR
     runs-on: ubuntu-latest
     steps:
-      - name: Check for message [TAG]
-        id: check
-        shell: bash
-        run: |
-          echo "Checking branch '${{ github.ref_name }}' commit message:"
-          echo "${{ github.event.head_commit.message }}"
+      # - name: Check for message [TAG]
+      #   id: check
+      #   shell: bash
+      #   run: |
+      #     echo "Checking branch '${{ github.ref_name }}' commit message:"
+      #     echo "${{ github.event.head_commit.message }}"
 
-          echo "::set-output name=relevant::false"
-          if grep -q "[AUTO-PR]" <<< "${{ github.event.head_commit.message }}"; then
-            echo "::set-output name=relevant::true"
-          fi
+      #     echo "::set-output name=relevant::false"
+      #     if grep -q "[AUTO-PR]" <<< "${{ github.event.head_commit.message }}"; then
+      #       echo "::set-output name=relevant::true"
+      #     fi
 
       - uses: actions/checkout@v3
-        if: ${{ steps.check.outputs.relevant == 'true' }}
+        # if: ${{ steps.check.outputs.relevant == 'true' }}
 
-      - name: Reset branch
-        shell: bash
-        run: |
-          git fetch origin main:main
-          git reset --hard main
-
+      # - name: Reset branch
+      #   shell: bash
+      #   run: |
+      #     git fetch origin main:main
+      #     git reset --hard main
 
       - name: Make a change
         shell: bash
@@ -41,10 +41,11 @@ jobs:
           date > domains/data-sync/.pr-changed
 
       - name: Create Pull Request
-        if: ${{ steps.check.outputs.relevant == 'true' }}
+        # if: ${{ steps.check.outputs.relevant == 'true' }}
         uses: peter-evans/create-pull-request@v4
         with:
           title: Update chart for '${{ github.ref_name }}'
-          branch: "${{ github.ref }}"
+          # branch: "${{ github.ref }}"
+          branch: main
           commit-message: Update chart for '${{ github.ref_name }}'
           author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
