--- a/.github/workflows/auto-create-pr-data-sync.yaml
+++ b/.github/workflows/auto-create-pr-data-sync.yaml
@@ -60,5 +60,5 @@ jobs:
           echo sooon
           gh pr list --state open
           echo "things!"
-          gh pr list --state open --json
+          gh pr list --state open --json number,baseRefName,headRefName
           
