--- a/.github/workflows/auto-create-pr-data-sync.yaml
+++ b/.github/workflows/auto-create-pr-data-sync.yaml
@@ -56,6 +56,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr list --state open --head '${{ github.ref_name }}' --json headRefName | grep -Eqv '${{ github.ref_name }}' && exit 0
+          gh pr list --state open --head '${{ github.ref_name }}' --json headRefName | grep -Eq '${{ github.ref_name }}' && exit 0
+
+          gh pr list --state open --head 'preview/add-consumption-endpoint' --json headRefName | grep -Eq 'preview/add-consumption-endpoint' && echo 'yay!'
 
           echo "gh pr create --base main --title 'Update chart for ${{ github.ref_name }}' --body ''"
