--- a/domains/data-sync/chart/values.yaml
+++ b/domains/data-sync/chart/values.yaml
@@ -7,7 +7,7 @@ api:
   replicaCount: 3
   image:
     name: ghcr.io/energinet-datahub/eo-data-sync
-    tag: 0.6.1-pr.17-32052f7
+    tag: 0.6.0
   imagePullSecrets:
 
 healthCheck:
