--- a/.github/workflows/build-datahub2-api-mock.yaml
+++ b/.github/workflows/build-datahub2-api-mock.yaml
@@ -48,7 +48,7 @@ jobs:
     needs: [build_container_and_release_chart]
     #only on: push to main OR PR on 'preview/**' branch
     if: github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/')
-    uses: Energinet-DataHub/.github/.github/workflows/update-chart-in-env.yaml@changed-eo-app-folder-structure
+    uses: Energinet-DataHub/.github/.github/workflows/update-chart-in-env.yaml@main
     with:
       env_repository: ${{ github.repository_owner }}/eo-base-environment
       env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
