--- a/domains/event-store/kafka-custom.yaml
+++ b/domains/event-store/kafka-custom.yaml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
-  name: my-cluster
+  name: a-cluster
 spec:
   kafka:
     version: 3.2.0
@@ -15,10 +15,20 @@ spec:
         port: 9093
         type: internal
         tls: true
-      - name: open
+      - name: external
         port: 9094
         type: nodeport
-        tls: true
+        tls: false
+        configuration:
+          bootstrap:
+            nodePort: 32100
+          brokers:
+          - broker: 0
+            nodePort: 32000
+          - broker: 1
+            nodePort: 32001
+          - broker: 2
+            nodePort: 32002
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
