--- a/domains/mock-oidc/Mock.Oidc/appsettings.Development.json
+++ b/domains/mock-oidc/Mock.Oidc/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OidcFiles": {
+    "UsersPath": "SettingFiles/users.yaml"
   }
 }
