Read clients from YAML file

--- a/domains/mock-oidc/Mock.Oidc/appsettings.Development.json
+++ b/domains/mock-oidc/Mock.Oidc/appsettings.Development.json
@@ -6,7 +6,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OidcFiles": {
-    "UsersPath": "SettingFiles/users.yaml"
+  "SettingFiles": {
+    "UsersPath": "SettingFiles/users.yaml",
+    "ClientsPath": "SettingFiles/clients.yaml"
   }
 }
