Authorize -> Signup -> Redirect_Uri

--- a/domains/mock-oidc/Mock.Oidc/appsettings.Development.json
+++ b/domains/mock-oidc/Mock.Oidc/appsettings.Development.json
@@ -6,8 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SettingFiles": {
-    "UsersPath": "SettingFiles/users.yaml",
-    "ClientsPath": "SettingFiles/clients.yaml"
-  }
+
+  "USERS_FILE_PATH": "SettingFiles/users.yaml",
+  "CLIENT_ID": "energy-origin",
+  "CLIENT_SECRET": "secret_secret_secret",
+  "CLIENT_REDIRECT_URI": "https://localhost:7124"
 }
