--- a/domains/mock-oidc/Mock.Oidc/Mock.Oidc.csproj
+++ b/domains/mock-oidc/Mock.Oidc/Mock.Oidc.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="JWT" Version="9.0.3" />
 		<PackageReference Include="YamlDotNet" Version="11.2.1" />
 	</ItemGroup>
 
