--- a/domains/event-store/dotnet/interface/Interface.csproj
+++ b/domains/event-store/dotnet/interface/Interface.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="EnergyOriginDateTimeExtension" Version="1.1.3" />
   </ItemGroup>
   
 </Project>
