--- a/domains/mock-oidc/Mock.Oidc/Tests/Tests.csproj
+++ b/domains/mock-oidc/Mock.Oidc/Tests/Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.17.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -30,6 +31,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Mock\Mock.Oidc.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
