--- a/domains/event-store/.devcontainer/devcontainer.json
+++ b/domains/event-store/.devcontainer/devcontainer.json
@@ -4,14 +4,5 @@
 		"dockerfile": "Dockerfile",
 		"args": { "VARIANT": "bullseye" }
 	},
-	"remoteUser": "vscode",
-	"features": {
-		"docker-from-docker": "20.10"
-	},
-	"mounts": [
-		"source=${env:HOME}${env:USERPROFILE}/.kube,target=/usr/local/share/kube-localhost,type=bind"
-	],
-	"remoteEnv": {
-		"SYNC_LOCALHOST_KUBECONFIG": "true"
-	}
+	"remoteUser": "vscode"
 }
