--- a/domains/mock-oidc/Mock.Oidc/Mock/Mock.Oidc.csproj
+++ b/domains/mock-oidc/Mock.Oidc/Mock/Mock.Oidc.csproj
@@ -11,4 +11,8 @@
 		<PackageReference Include="YamlDotNet" Version="11.2.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="wwwroot\images\" />
+	</ItemGroup>
+
 </Project>
