--- a/domains/mock-oidc/Mock.Oidc/Mock/SettingFiles/users.yaml
+++ b/domains/mock-oidc/Mock.Oidc/Mock/SettingFiles/users.yaml
@@ -1,4 +1,5 @@
-﻿- name: "Charlotte"
+﻿- name: "Charlotte CSR"
+  imageUrl: "/images/charlotteCSR.png"
   idToken:
     sub: "7DADB7DB-0637-4446-8626-2781B06A9E20"
     foo: bla
@@ -9,8 +10,9 @@
     bar: bla
     num: 24
     nemid.cvr: 9876543210
-- name: "Not Charlotte"
+- name: "Erik Energirådgiver"
   description: "This is not Charlotte"
+  imageUrl: "/images/erikEnergirådgiver.png"
   idToken:
     sub: "95D7BE81-0CFB-4B52-9C92-33A45747FCEF"
     foo: bla
