--- a/domains/mock-oidc/chart/values.yaml
+++ b/domains/mock-oidc/chart/values.yaml
@@ -2,7 +2,10 @@ api:
   replicaCount: 3
   probes: true
   image:
-    name: ghcr.io/energinet-datahub/eo-measurements
+    name: ghcr.io/energinet-datahub/eo-mock-oidc
     tag: 0.0.1
   env:
-    DATASYNCENDPOINT:
+    USERS_FILE_PATH:
+    CLIENT_ID:
+    CLIENT_SECRET:
+    CLIENT_REDIRECT_URI:
