--- a/domains/mock-oidc/Mock.Oidc/Mock/SettingFiles/users.yaml
+++ b/domains/mock-oidc/Mock.Oidc/Mock/SettingFiles/users.yaml
@@ -1,5 +1,5 @@
 ﻿- name: "Charlotte CSR"
-  imageUrl: "/images/charlotteCSR.png"
+  imageUrl: "https://dummyimage.com/200x200/02525e/fff&text=CharlotteImage"
   idToken:
     sub: "7DADB7DB-0637-4446-8626-2781B06A9E20"
     foo: bla
@@ -12,7 +12,7 @@
     nemid.cvr: 9876543210
 - name: "Erik Energirådgiver"
   description: "This is not Charlotte"
-  imageUrl: "/images/erikEnergirådgiver.png"
+  imageUrl: "https://dummyimage.com/200x200/02525e/fff&text=ErikImage"
   idToken:
     sub: "95D7BE81-0CFB-4B52-9C92-33A45747FCEF"
     foo: bla
