Switch to jose-jwt

--- a/domains/mock-oidc/Mock.Oidc/Mock/Mock.Oidc.csproj
+++ b/domains/mock-oidc/Mock.Oidc/Mock/Mock.Oidc.csproj
@@ -13,7 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="JWT" Version="9.0.3" />
+		<PackageReference Include="jose-jwt" Version="4.0.0" />
 		<PackageReference Include="YamlDotNet" Version="11.2.1" />
 	</ItemGroup>
 
