--- a/.github/workflows/build-oidc-mock.yaml
+++ b/.github/workflows/build-oidc-mock.yaml
@@ -80,11 +80,16 @@ jobs:
   update-environment:
     name: Update preview environment
     needs: release-chart
+    runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/')
-    uses: ./.github/actions/update-base-environment.yaml@preview/oidc-mock
-    with:
-      env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
-      app_name: ${{ needs.release-chart.outputs.chart-name }}
-      chart_name: ${{ needs.release-chart.outputs.chart-name }}
-      chart_version: ${{ needs.resolve-versions.outputs.chart }}
-      deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
+    steps:
+      - uses: actions/checkout@v3
+        
+      - name: Update environment
+        uses: ./.github/actions/update-base-environment.yaml@preview/oidc-mock
+        with:
+          env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
+          app_name: ${{ needs.release-chart.outputs.chart-name }}
+          chart_name: ${{ needs.release-chart.outputs.chart-name }}
+          chart_version: ${{ needs.resolve-versions.outputs.chart }}
+          deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
