--- a/.github/workflows/build-oidc-mock.yaml
+++ b/.github/workflows/build-oidc-mock.yaml
@@ -86,7 +86,7 @@ jobs:
       - uses: actions/checkout@v3
         
       - name: Update environment
-        uses: ./.github/actions/update-base-environment.yaml@preview/oidc-mock
+        uses: Energinet-DataHub/energy-origin/.github/actions/update-base-environment.yaml@preview/oidc-mock
         with:
           env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
           app_name: ${{ needs.release-chart.outputs.chart-name }}
