--- a/domains/emissions/chart/values.yaml
+++ b/domains/emissions/chart/values.yaml
@@ -3,3 +3,8 @@ api:
   image:
     name: ghcr.io/energinet-datahub/eo-emissions
     tag: 0.2.0
+  env:
+    # DATASYNCENDPOINT:
+    # ENERGIDATASERVICEENDPOINT:
+    # RENEWABLESOURCES: "foo,bar"
+    # WASTERENEWABLESHARE:
