--- a/domains/oidc-mock/Oidc.Mock/Mock/Properties/launchSettings.json
+++ b/domains/oidc-mock/Oidc.Mock/Mock/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Mock.Oidc": {
+    "Oidc.Mock": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
