--- a/domains/oidc-mock/Oidc.Mock/Tests/Tests.csproj
+++ b/domains/oidc-mock/Oidc.Mock/Tests/Tests.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mock\Mock.Oidc.csproj" />
+    <ProjectReference Include="..\Mock\Oidc.Mock.csproj" />
   </ItemGroup>
 
   <ItemGroup>
