--- a/domains/measurements/Measurements.API/.vscode/launch.json
+++ b/domains/measurements/Measurements.API/.vscode/launch.json
@@ -11,7 +11,9 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/API/bin/Debug/net6.0/API.dll",
-            "args": ["urls=http://localhost:8080"],
+            "args": [
+                "urls=http://localhost:8080"
+            ],
             "cwd": "${workspaceFolder}/API",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
