--- a/domains/oidc-mock/Oidc.Mock/Tests/test-users.yaml
+++ b/domains/oidc-mock/Oidc.Mock/Tests/test-users.yaml
@@ -1,7 +1,7 @@
 ﻿- name: "Charlotte"
   idToken:
     sub: "7DADB7DB-0637-4446-8626-2781B06A9E20"
-    foo: 42
+    something: "foo"
   userinfoToken:
     sub: "7DADB7DB-0637-4446-8626-2781B06A9E20"
-    bar: 42
+    something: "bar"
