--- a/domains/oidc-mock/Oidc.Mock/Mock/SettingFiles/users.yaml
+++ b/domains/oidc-mock/Oidc.Mock/Mock/SettingFiles/users.yaml
@@ -1,4 +1,4 @@
-﻿- name: "Charlotte CSR"
+- name: "Charlotte CSR"
   imageUrl: "https://dummyimage.com/200x200/02525e/fff&text=CharlotteImage"
   idToken:
     sub: "7DADB7DB-0637-4446-8626-2781B06A9E20"
