Remove YAML for users

--- a/domains/oidc-mock/Oidc.Mock/Mock/appsettings.Development.json
+++ b/domains/oidc-mock/Oidc.Mock/Mock/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
 
-  "USERS_FILE_PATH": "SettingFiles/users.yaml",
+  "USERS_FILE_PATH": "SettingFiles/development-users.json",
   "CLIENT_ID": "energy-origin",
   "CLIENT_SECRET": "secret_secret_secret",
   "CLIENT_REDIRECT_URI": "https://localhost:7124"
