--- a/.github/workflows/check-licenses-oidc-mock.yaml
+++ b/.github/workflows/check-licenses-oidc-mock.yaml
@@ -14,5 +14,5 @@ jobs:
     - name: Check license
       uses: Energinet-DataHub/.github/.github/actions/dotnet-check-license@main
       with:
-        project-folder: domains/oidc-mock/Oidc.Mock/Mock
+        project-folder: domains/oidc-mock/Mock
         license-mapping-file: .mapped-licenses.json
