--- a/domains/oidc-mock/chart/values.yaml
+++ b/domains/oidc-mock/chart/values.yaml
@@ -5,6 +5,7 @@ api:
     name: ghcr.io/energinet-datahub/eo-oidc-mock
     tag: 0.0.1
   env:
+    PATH_BASE:
     USERS_FILE_PATH:
     CLIENT_ID:
     CLIENT_SECRET:
