--- a/.github/workflows/build-measurements.yaml
+++ b/.github/workflows/build-measurements.yaml
@@ -15,62 +15,81 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  define_build:
-    name: Define build matrix
+  resolve-versions:
+    name: Resolve versions
     runs-on: ubuntu-latest
     outputs:
-      chart_version: ${{ steps.get_semver.outputs.semver }}
-      containers: >-
-        [
-          {
-            "deployment_name": "api",
-            "dockerfile": "domains/measurements/Measurements.API/API/Dockerfile",
-            "image_name": "eo-measurements",
-            "image_tag": "${{ steps.get_api_container_version.outputs.semver }}",
-            "context": "domains/measurements/Measurements.API/"
-          }
-        ]
+      chart: ${{ steps.resolve-chart.outputs.semver }}
+      image: ${{ steps.resolve-image.outputs.semver }}
     steps:
-      - name: Get chart version
-        id: get_semver
+      - name: Resolve chart version
+        id: resolve-chart
         uses: Energinet-DataHub/.github/.github/actions/get-semver@main
         with:
           yaml_file: domains/measurements/chart/Chart.yaml
           yaml_path: version
 
-      - name: Get container version
-        id: get_api_container_version
+      - name: Resolve image version
+        id: resolve-image
         uses: Energinet-DataHub/.github/.github/actions/get-semver@main
         with:
           yaml_file: domains/measurements/chart/values.yaml
           yaml_path: api.image.tag
 
-  build_container_and_release_chart:
-    name: Build containers
-    needs: [define_build]
-    uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@main
-    with:
-      helm_repository: ${{ github.repository_owner }}/helm-charts
-      chart_folder: domains/measurements/chart
-      chart_version: ${{ needs.define_build.outputs.chart_version }}
-      containers: ${{ needs.define_build.outputs.containers }}
-      version_yaml_path_prefix: ""
-      include_image_name: true
-    secrets:
-      deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
+  publish:
+    name: Publish container
+    needs: resolve-versions
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-  update_environment:
-    name: Update env
-    needs: [build_container_and_release_chart]
-    #only on: push to main OR PR on 'preview/**' branch
+      - name: Build image
+        uses: Energinet-DataHub/.github/.github/actions/build-and-push-container@main
+        with:
+          dockerfile: domains/measurements/Measurements.API/API/Dockerfile
+          image-name: eo-measurements
+          image-tag: ${{ needs.resolve-versions.outputs.image }}
+          docker-context: domains/measurements/Measurements.API/
+
+  release-chart:
+    name: Release chart
+    needs: [publish, resolve-versions]
+    runs-on: ubuntu-latest
+    outputs:
+      chart-name: ${{ steps.release-chart.outputs.chart_name }}
+      chart-version: ${{ steps.release-chart.outputs.chart_version }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Update image tag
+        uses: Energinet-DataHub/.github/.github/actions/yaml-set@main
+        with:
+          yaml_file: domains/measurements/chart/values.yaml
+          yaml_path: api.image.tag
+          value: ${{ needs.resolve-versions.outputs.image }}
+
+      - name: Release chart
+        id: release-chart
+        uses: Energinet-DataHub/.github/.github/actions/helm-release-chart@main
+        with:
+          chart_folder: domains/measurements/chart
+          chart_version: ${{ needs.resolve-versions.outputs.chart }}
+          include_image_name: true
+          deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
+
+  update-environment:
+    name: Update preview environment
+    needs: [resolve-versions, release-chart]
+    runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/')
-    uses: Energinet-DataHub/.github/.github/workflows/update-chart-in-env.yaml@main
-    with:
-      env_repository: ${{ github.repository_owner }}/eo-base-environment
-      env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
-      app_name: ${{ needs.build_container_and_release_chart.outputs.chart_name }}
-      helm_repository: https://${{ github.repository_owner }}.github.io/helm-charts/
-      chart_name: ${{ needs.build_container_and_release_chart.outputs.chart_name }}
-      chart_version: ${{ needs.build_container_and_release_chart.outputs.chart_version }}
-    secrets:
-      deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Update environment
+        uses: Energinet-DataHub/energy-origin/.github/actions/update-base-environment@preview/oidc-mock
+        with:
+          env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
+          app_name: ${{ needs.release-chart.outputs.chart-name }}
+          chart_name: ${{ needs.release-chart.outputs.chart-name }}
+          chart_version: ${{ needs.resolve-versions.outputs.chart }}
+          deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
