--- a/.github/workflows/check-licenses.yml
+++ b/.github/workflows/check-licenses.yml
@@ -46,6 +46,10 @@ jobs:
 
           echo "::set-output name=matrix::${matrix}"
 
+          echo '::group::Matrix'
+          echo "$matrix" | jq -r '.'
+          echo '::endgroup::'
+
   check-licenses:
     runs-on: ubuntu-latest
     needs: define-matrix
