--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -1,4 +1,4 @@
-name: Check Licenses
+name: Check Versions
 
 on:
   pull_request:
@@ -22,7 +22,7 @@ jobs:
           git checkout main
           git checkout -
 
-      - name: Find relevant projects
+      - name: Find relevant charts
         id: define-matrix
         shell: bash
         run: |
@@ -42,7 +42,7 @@ jobs:
           echo "$pattern"
           echo '::endgroup::'
 
-          matrix=$(find domains libraries/dotnet -name "*.csproj" -exec dirname {} \; | egrep "$pattern" | while read directory; do printf '{"project": "%s"}' "$directory"; done | jq -sc '.')
+          matrix=$(find domains libraries/dotnet -name "chart" -type d | egrep "$pattern" | while read directory; do printf '{"chart": "%s"}' "$directory"; done | jq -sc '.')
 
           echo "::set-output name=matrix::${matrix}"
 
@@ -50,17 +50,32 @@ jobs:
           echo "$matrix" | jq -r '.'
           echo '::endgroup::'
 
-  check-licenses:
+  check-helm-version:
     runs-on: ubuntu-latest
     needs: define-matrix
     strategy:
       matrix:
-        projects: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
+        charts: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
 
-      - name: Check license
-        uses: ./.github/actions/dotnet-check-license
+      - name: Check Versions
+        uses: ./.github/actions/yaml-check-version
         with:
-          project-folder: ${{ matrix.projects.project }}
-          license-mapping-file: .mapped-licenses.json
+          yaml-file: ${{ matrix.charts.chart }}/Chart.yaml
+          yaml-path: version
+
+  check-api-version:
+    runs-on: ubuntu-latest
+    needs: define-matrix
+    strategy:
+      matrix:
+        charts: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Check Versions
+        uses: ./.github/actions/yaml-check-incremented-version
+        with:
+          yaml-file: ${{ matrix.charts.chart }}/values.yaml
+          yaml-path: api.image.tag
